fixed ticket stretching

--- a/www/css/styles.mobile.less
+++ b/www/css/styles.mobile.less
@@ -131,9 +131,11 @@
         &.landscape .ticket {
             position: static;
             width: 300px;
+            height: auto;
         }
         &.portrait .ticket {
             position: static;
+            width: auto;
             height: 300px;
         }
     }
